# mpc-node

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/opts/: tss.rs  tx.rs
ctss/src/: lib.rs
tss/: Cargo.toml  build.rs
tss/protos/: msg.proto
tss/src/: common.rs  keygen.rs  lib.rs  message.rs  network.rs  sign.rs
