[package]
name = "tss-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["ethereum", "web3", "mpc", "tss", "cli"]

[dependencies]
actix = "0.13"
actix-codec = "0.5"
actix-rt = "2"
clap = { version = "4.0.32", features = ["derive", "env", "unicode", "wrap_help"] }
color-eyre = "0.6.2"
env_logger = "0.11"
eyre = "0.6.8"
hex = "0.4.3"
log = "0.4"
rlp = "0.5.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
web3 = "0.19"

tss-lib = { path = "../tss" }
