[package]
name = "tss-lib"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["mpc", "tss"]

[dependencies]
actix = "0.13"
actix-codec = "0.5"
actix-rt = "2"
anyhow = "1.0.68"
async-sse = "5.1.0"
async-trait = "0.1"
awc = { version = "3.1", features = ["rustls"] }
curv-kzen = "0.10"
futures = "0.3.25"
futures-util = "0.3"
log = "0.4"
prost = "0.12"
prost-types = { version = "0.12", optional = true }
rand = "0.8"
rand_chacha = "0.3"
rand_dev = "0.1"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
round-based = "0.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
surf = "2.3.2"
tokio = { version = "1.24.1", features = ["macros"] }
tokio-tungstenite = "0.21"
tokio-util = "0.7"
tracing = "0.1"

[dependencies.cggmp21]
git = "https://github.com/dfns/cggmp21"
features = ["all-curves"]

[dependencies.cggmp21-keygen]
git = "https://github.com/dfns/cggmp21"

[dependencies.key-share]
git = "https://github.com/dfns/cggmp21"

[build-dependencies]
prost-build = "0.12"
